# std_standalone

node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/asset-registry/: Cargo.toml
pallets/market/: Cargo.toml
pallets/market/src/: lib.rs
pallets/oracle/: Cargo.toml
pallets/template/src/: lib.rs
pallets/vault/: Cargo.toml
pallets/vault/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
