[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
sc-cli = "0.9.0"
build-script-utils = { package = "substrate-build-script-utils", version = "3.0.0" }
structopt = { version = "0.3.8", optional = true }
vergen = { version = "3.0.4", optional = true }

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
futures = '0.3.4'
serde_json = { version = "1.0.61"}

# local dependencies
node-template-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
# primitives
sp-core = "3.0.0"
sp-runtime = "3.0.0"
sp-inherents = "3.0.0"
sp-consensus = "0.9.0"
sp-consensus-babe = "0.9.0"
sp-finality-grandpa = "3.0.0"
sp-transaction-pool = "3.0.0"
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-keystore = '0.9.0'
sp-authority-discovery = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

# client dependencies
sc-client-api = "3.0.0"
sc-chain-spec = "3.0.0"
sc-consensus = "0.9.0"
sc-consensus-slots = "0.9.0"
sc-transaction-pool = "3.0.0"
sc-authority-discovery = '0.9.0'
sc-network = "0.9.0"
sc-finality-grandpa = "0.9.0"
sc-finality-grandpa-rpc = '=0.9.0'
sc-offchain = "3.0.0"
sc-client-db = { version = "0.9.0", default-features = false }
sc-rpc = "3.0.0"
sc-basic-authorship = "0.9.0"
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = "3.0.0"
sc-consensus-babe = "0.9.0"
sc-consensus-babe-rpc = '0.9.0'
sc-consensus-epochs = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' , optional=true }
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-rpc-api = '0.9.0'
sp-api = '3.0.0'


# frame dependencies
frame-system = '3.0.0'
pallet-transaction-payment = '3.0.0'
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
pallet-im-online = '3.0.0'
pallet-staking = '3.0.0'
primitives = {path = "../primitives", default-features = false}
[features]
default = ["cli","wasmtime"]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
    "sc-cli",
    "structopt",
	"vergen",
]