[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { version = "3.0.0", default-features = false }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }

#orml
orml-currencies = { version = "0.4.0", default-features = false }
orml-tokens = { version = "0.4.0",default-features = false }
orml-traits = { version = "0.4.0",default-features = false }
primitives = { path = "../primitives", default-features = false }
pallet-asset-registry = { path = "../pallets/asset-registry", default-features= false }
pallet-standard-oracle = { path = "../pallets/oracle", default-features= false }
pallet-standard-market = { path = '../pallets/market', default_features = false }
pallet-standard-vault = { path = '../pallets/vault', default_features = false }

# Staking dependencies
pallet-authority-discovery = {default-features = false, version = '3.0.0'}
pallet-authorship = {default-features = false, version = '3.0.0'}
pallet-babe = {default-features = false, version = '3.0.0'}
pallet-indices = {default-features = false, version = '3.0.0'}
pallet-collective = {default-features = false, version = '3.0.0'}
pallet-elections-phragmen = {default-features = false, version = '3.0.0'}
pallet-im-online = {default-features = false, version = '3.0.0'}
pallet-offences = {default-features = false, version = '3.0.0'}
pallet-session = {default-features = false, version = '3.0.0'}
pallet-staking = {default-features = false, version = '3.0.0'}
pallet-staking-reward-curve = {default-features = false, version = '3.0.0'}
pallet-treasury = {default-features = false, version = '3.0.0'}
sp-authority-discovery = {default-features = false, version = '3.0.0'}
sp-consensus-babe = {default-features = false, version = '0.9.0'}
sp-staking = { default-features = false, version = '3.0.0' }

pallet-contracts = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-indices/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-io/std',
    'sp-staking/std',
    'sp-consensus-babe/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-authority-discovery/std',
    'pallet-staking/std',
    'pallet-treasury/std',
    'pallet-offences/std',
    'pallet-authority-discovery/std',
    'pallet-elections-phragmen/std',
    'pallet-collective/std',
    'pallet-session/std',
    'pallet-babe/std',
    'pallet-im-online/std',
    'pallet-contracts/std',
    'pallet-indices/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'pallet-asset-registry/std',
    'pallet-standard-oracle/std',
    'pallet-standard-market/std',
    'pallet-standard-vault/std',

]
