[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-standard-market'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", features = ["derive"], default-features = false }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
pallet-balances = { default_features = false, version = '3.0.0' }
orml-currencies = { version = "0.4.0", default-features = false }
orml-tokens = { version = "0.4.0",default-features = false }
orml-traits = { version = "0.4.0",default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
primitives = { path = "../../primitives", default-features = false }
sp-std = { default-features = false, version = "3.0.0" }
[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'pallet-balances/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'pallet-asset-registry/std',
    'primitives/std',
    'sp-std/std'
]
